--- a/components/operator/templates/instance/validating-webhook.yaml
+++ b/components/operator/templates/instance/validating-webhook.yaml
@@ -40,4 +40,4 @@ webhooks:
           - UPDATE
         resources:
           - appdeployments
-          - virtualenvsnapshots
+          - releasemanifests
