--- a/examples/go/hello-world/kubefox/hack/environments/qa.yaml
+++ b/examples/go/hello-world/kubefox/hack/environments/qa.yaml
@@ -5,7 +5,6 @@ metadata:
 spec:
   releasePolicy:
     versionRequired: false
-    dataSnapshotRequired: false
 data:
   vars:
     who: World
@@ -17,3 +16,6 @@ metadata:
   name: qa
 spec:
   environment: qa
+data:
+  secrets:
+    this: thisisatest
