refactored app deployment to ensure same app cannot be released twice

--- a/api/crds/kubefox.xigxog.io_appdeployments.yaml
+++ b/api/crds/kubefox.xigxog.io_appdeployments.yaml
@@ -26,6 +26,9 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .spec.appName
+      name: App
+      type: string
     - jsonPath: .status.conditions[?(@.type=='Available')].status
       name: Available
       type: string
